# my-no-sql-entities

./: Cargo.toml
src/: agent_settings.rs  badges.rs  chat_test.rs  chat_tests.rs  dg_project.rs  dg_skipped_units.rs  dyn_content_cache.rs  lib.rs  llm_cached_data.rs  llm_settings.rs  project_gallery.rs  project_resources.rs  sst_profiles.rs  stt_profiles.rs  summary_agents.rs  system_prompts.rs  tenants.rs  translations.rs  vad_settings.rs  widget_client.rs
src/car_inventory/: car_inventory.rs  car_sales_location.rs  mod.rs
src/chat_tests/: chat_test.rs  chat_test_result.rs  mod.rs
src/dg/: mod.rs  project_gallery.rs
src/integration_settings/: integration_settings.rs  mod.rs  open_api_settings.rs  spark_post_settings.rs
src/legacy/: mod.rs  system_prompts.rs
src/llm/: agent_settings.rs  general_settings.rs  mod.rs  summary_agents.rs
src/product_settings/: mod.rs  product_settings.rs  spark_post_settings.rs
