[package]
name = "my-no-sql-entities"
version = "0.1.0"
edition = "2024"

[dependencies]
service-sdk = { tag = "0.4.2", git = "https://github.com/MyJetTools/service-sdk.git", features = [
    "macros",
    "my-nosql-sdk",
] }

serde = { version = "*", features = ["derive"] }

chat-bot-common = { git = "https://github.com/my-ai-chatbot/chat-bot-common.git", tag = "0.1.1" }
